bench: methodology fixes from the JMH fleet review
- countHand now visits every leaf and applies the leaf read — the floor a
  generic push-based fold can actually reach; the size-summing variant moves
  to its own countAbsoluteFloor row so the gate never reads phantom headroom.
- toListHand drops the magic pre-size and pays the terminal List.copyOf that
  Stream.toList's unmodifiable contract pays.
- handFusedTree3 wraps with unmodifiableList (O(1)) instead of List.copyOf
  (O(n)) to match the traversal's own rebuild shape exactly.
- Dead annotations the harness always overrides removed (MapperConstruction's
  microseconds OutputTimeUnit — the build pins ns; ContainerLoopSpike's
  Warmup/Measurement/Fork).
- Every run recipe in the new javadocs is now the gating recipe (fork >= 3).
- FromMapBenchmark gains the missing bean-side positional floor.